<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:scaleType="centerCrop"
        android:src="@drawable/mayan_fresco"
        ads:layout_constraintBottom_toTopOf="@+id/choose_label"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/choose_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/arapey"
        android:text="@string/choose_your_path"
        android:textColor="@color/yale_blue"
        android:textSize="34sp"
        ads:layout_constraintBottom_toTopOf="@+id/decimal_to_mayan_btn"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/decimal_to_mayan_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/decimal_to_mayan"
        android:textColor="@color/white"
        ads:layout_constraintBottom_toTopOf="@+id/mayan_to_decimal_btn"
        ads:layout_constraintEnd_toEndOf="@+id/mayan_to_decimal_btn"
        ads:layout_constraintStart_toStartOf="@+id/mayan_to_decimal_btn" />

    <Button
        android:id="@+id/mayan_to_decimal_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/mayan_to_decimal"
        android:textColor="@color/white"
        ads:layout_constraintBottom_toTopOf="@+id/main_bottom_banner"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/main_bottom_banner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        ads:adUnitId="ca-app-pub-8138320543747940/6696082003"
        ads:adSize="SMART_BANNER"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>