<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.decimal.ToDecimalFragment">

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/queen_blue"
        android:fontFamily="@font/arapey"
        android:gravity="bottom|end"
        android:padding="8dp"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/mayan_recycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="012345678901234567890123" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mayan_recycler"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:scrollbars="horizontal"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/divider_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_wrapBehaviorInParent="horizontal_only"
        tools:itemCount="1"
        tools:listitem="@layout/list_item_mayan_number">

    </androidx.recyclerview.widget.RecyclerView>

    <View
        android:id="@+id/divider_view"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/queen_blue"
        app:layout_constraintBottom_toTopOf="@+id/m00_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/m00_button"
        style="@style/MayanImageButton"
        android:src="@drawable/m0"
        app:layout_constraintBottom_toTopOf="@+id/m05_button"
        app:layout_constraintEnd_toStartOf="@id/m01_button"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/m01_button"
        style="@style/MayanImageButton"
        android:src="@drawable/m1"
        app:layout_constraintBottom_toBottomOf="@+id/m00_button"
        app:layout_constraintTop_toTopOf="@+id/m00_button"
        app:layout_constraintEnd_toStartOf="@+id/m02_button"
        app:layout_constraintStart_toEndOf="@+id/m00_button" />

    <ImageButton
        android:id="@+id/m02_button"
        style="@style/MayanImageButton"
        android:src="@drawable/m2"
        app:layout_constraintBottom_toBottomOf="@+id/m01_button"
        app:layout_constraintTop_toTopOf="@+id/m01_button"
        app:layout_constraintEnd_toStartOf="@+id/m03_button"
        app:layout_constraintStart_toEndOf="@+id/m01_button" />

    <ImageButton
        android:id="@+id/m03_button"
        style="@style/MayanImageButton"
        android:src="@drawable/m3"
        app:layout_constraintBottom_toBottomOf="@+id/m02_button"
        app:layout_constraintTop_toTopOf="@+id/m02_button"
        app:layout_constraintEnd_toStartOf="@+id/m04_button"
        app:layout_constraintStart_toEndOf="@+id/m02_button" />

    <ImageButton
        android:id="@+id/m04_button"
        style="@style/MayanImageButton"
        android:src="@drawable/m4"
        app:layout_constraintBottom_toBottomOf="@+id/m03_button"
        app:layout_constraintTop_toTopOf="@+id/m03_button"
        app:layout_constraintEnd_toStartOf="@id/delete_image_button"
        app:layout_constraintStart_toEndOf="@+id/m03_button" />

    <ImageButton
        android:id="@+id/delete_image_button"
        style="@style/MayanImageButton"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/mandarin"
        android:contentDescription="@string/delete"
        android:scaleType="fitCenter"
        android:src="@android:drawable/ic_input_delete"
        app:layout_constraintStart_toEndOf="@+id/m04_button"
        app:layout_constraintBottom_toBottomOf="@+id/m04_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/m04_button"
        app:tint="@color/white" />

    <ImageButton
        android:id="@+id/m05_button"
        style="@style/MayanImageButton"
        android:src="@drawable/m5"
        app:layout_constraintBottom_toTopOf="@+id/m10_button"
        app:layout_constraintEnd_toStartOf="@+id/m06_button"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/m06_button"
        style="@style/MayanImageButton"
        android:src="@drawable/m6"
        app:layout_constraintBottom_toBottomOf="@+id/m05_button"
        app:layout_constraintEnd_toStartOf="@+id/m07_button"
        app:layout_constraintStart_toEndOf="@+id/m05_button"
        app:layout_constraintTop_toTopOf="@+id/m05_button" />

    <ImageButton
        android:id="@+id/m07_button"
        style="@style/MayanImageButton"
        android:src="@drawable/m7"
        app:layout_constraintBottom_toBottomOf="@+id/m06_button"
        app:layout_constraintEnd_toStartOf="@+id/m08_button"
        app:layout_constraintStart_toEndOf="@+id/m06_button"
        app:layout_constraintTop_toTopOf="@+id/m06_button" />

    <ImageButton
        android:id="@+id/m08_button"
        style="@style/MayanImageButton"
        android:src="@drawable/m8"
        app:layout_constraintBottom_toBottomOf="@+id/m07_button"
        app:layout_constraintEnd_toStartOf="@+id/m09_button"
        app:layout_constraintStart_toEndOf="@+id/m07_button"
        app:layout_constraintTop_toTopOf="@+id/m07_button" />

    <ImageButton
        android:id="@+id/m09_button"
        style="@style/MayanImageButton"
        android:src="@drawable/m9"
        app:layout_constraintBottom_toBottomOf="@+id/m08_button"
        app:layout_constraintEnd_toStartOf="@+id/ac_button"
        app:layout_constraintStart_toEndOf="@+id/m08_button"
        app:layout_constraintTop_toTopOf="@+id/m08_button" />

    <Button
        android:id="@+id/ac_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/clear"
        android:text="@string/ac"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/m09_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/m09_button"
        app:layout_constraintTop_toTopOf="@+id/m09_button" />

    <ImageButton
        android:id="@+id/m10_button"
        style="@style/MayanImageButton"
        android:src="@drawable/ma"
        app:layout_constraintBottom_toTopOf="@+id/m15_button"
        app:layout_constraintEnd_toStartOf="@+id/m11_button"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/m11_button"
        style="@style/MayanImageButton"
        android:src="@drawable/mb"
        app:layout_constraintBottom_toBottomOf="@+id/m10_button"
        app:layout_constraintEnd_toStartOf="@+id/m12_button"
        app:layout_constraintStart_toEndOf="@+id/m10_button"
        app:layout_constraintTop_toTopOf="@+id/m10_button" />

    <ImageButton
        android:id="@+id/m12_button"
        style="@style/MayanImageButton"
        android:src="@drawable/mc"
        app:layout_constraintBottom_toBottomOf="@+id/m11_button"
        app:layout_constraintEnd_toStartOf="@+id/m13_button"
        app:layout_constraintStart_toEndOf="@+id/m11_button"
        app:layout_constraintTop_toTopOf="@+id/m11_button" />

    <ImageButton
        android:id="@+id/m13_button"
        style="@style/MayanImageButton"
        android:src="@drawable/md"
        app:layout_constraintBottom_toBottomOf="@+id/m12_button"
        app:layout_constraintEnd_toStartOf="@+id/m14_button"
        app:layout_constraintStart_toEndOf="@+id/m12_button"
        app:layout_constraintTop_toTopOf="@+id/m12_button" />

    <ImageButton
        android:id="@+id/m14_button"
        style="@style/MayanImageButton"
        android:src="@drawable/me"
        app:layout_constraintBottom_toBottomOf="@+id/m13_button"
        app:layout_constraintEnd_toStartOf="@id/equal_button"
        app:layout_constraintStart_toEndOf="@+id/m13_button"
        app:layout_constraintTop_toTopOf="@+id/m13_button" />

    <ImageButton
        android:id="@+id/m15_button"
        style="@style/MayanImageButton"
        android:src="@drawable/mf"
        app:layout_constraintBottom_toTopOf="@+id/decimal_bottom_banner"
        app:layout_constraintEnd_toStartOf="@+id/m16_button"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/m16_button"
        style="@style/MayanImageButton"
        android:src="@drawable/mg"
        app:layout_constraintBottom_toBottomOf="@+id/m15_button"
        app:layout_constraintTop_toTopOf="@+id/m15_button"
        app:layout_constraintEnd_toStartOf="@+id/m17_button"
        app:layout_constraintStart_toEndOf="@+id/m15_button" />

    <ImageButton
        android:id="@+id/m17_button"
        style="@style/MayanImageButton"
        android:src="@drawable/mh"
        app:layout_constraintBottom_toBottomOf="@+id/m16_button"
        app:layout_constraintTop_toTopOf="@+id/m16_button"
        app:layout_constraintEnd_toStartOf="@+id/m18_button"
        app:layout_constraintStart_toEndOf="@+id/m16_button" />

    <ImageButton
        android:id="@+id/m18_button"
        style="@style/MayanImageButton"
        android:src="@drawable/mi"
        app:layout_constraintBottom_toBottomOf="@+id/m17_button"
        app:layout_constraintEnd_toStartOf="@+id/m19_button"
        app:layout_constraintStart_toEndOf="@+id/m17_button"
        app:layout_constraintTop_toTopOf="@+id/m17_button" />

    <ImageButton
        android:id="@+id/m19_button"
        style="@style/MayanImageButton"
        android:src="@drawable/mj"
        app:layout_constraintBottom_toBottomOf="@+id/m18_button"
        app:layout_constraintStart_toEndOf="@+id/m18_button"
        app:layout_constraintTop_toTopOf="@+id/m18_button"
        app:layout_constraintEnd_toStartOf="@id/equal_button" />

    <Button
        android:id="@+id/equal_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/convert"
        android:text="@string/equal_sign"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@+id/m19_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/ac_button"
        app:layout_constraintTop_toTopOf="@+id/m14_button" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/decimal_bottom_banner"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-8138320543747940/9780552485"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>